# tch-rs

./: Cargo.toml
src/wrappers/: jit.rs  tensor.rs
tests/: jit_tests.rs  tensor_tests.rs
torch-sys/: Cargo.toml  build.rs
torch-sys/src/: lib.rs
